// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`all bugs field present 1`] = `
{
  "email": "bugs@foobar.local",
  "url": "bugs.foobar.local",
}
`;

exports[`bun overrides 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "devEngines": {
    "packageManager": {
      "name": "bun",
      "onFail": "ignore",
    },
  },
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "overrides": {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "projen build",
    "compile": "projen compile",
    "default": "projen default",
    "eject": "projen eject",
    "package": "projen package",
    "post-compile": "projen post-compile",
    "pre-compile": "projen pre-compile",
    "test": "projen test",
  },
  "version": "0.0.0",
}
`;

exports[`no bugs field present 1`] = `undefined`;

exports[`npm overrides 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "devEngines": {
    "packageManager": {
      "name": "npm",
      "onFail": "ignore",
    },
  },
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "overrides": {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "projen build",
    "compile": "projen compile",
    "default": "projen default",
    "eject": "projen eject",
    "package": "projen package",
    "post-compile": "projen post-compile",
    "pre-compile": "projen pre-compile",
    "test": "projen test",
  },
  "version": "0.0.0",
}
`;

exports[`pnpm overrides 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "devEngines": {
    "packageManager": {
      "name": "pnpm",
      "onFail": "ignore",
      "version": ">=10",
    },
  },
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "packageManager": "pnpm@10.33.0",
  "pnpm": {
    "overrides": {
      "other-dep": "*",
      "some-dep": "1.0.0",
    },
  },
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "projen build",
    "compile": "projen compile",
    "default": "projen default",
    "eject": "projen eject",
    "package": "projen package",
    "post-compile": "projen post-compile",
    "pre-compile": "projen pre-compile",
    "test": "projen test",
  },
  "version": "0.0.0",
}
`;

exports[`pnpm overrides in root project only, not subprojects 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "devEngines": {
    "packageManager": {
      "name": "pnpm",
      "onFail": "ignore",
      "version": ">=10",
    },
  },
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "packageManager": "pnpm@10.33.0",
  "pnpm": {},
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "projen build",
    "compile": "projen compile",
    "default": "projen default",
    "eject": "projen eject",
    "package": "projen package",
    "post-compile": "projen post-compile",
    "pre-compile": "projen pre-compile",
    "test": "projen test",
  },
  "version": "0.0.0",
}
`;

exports[`pnpm overrides in root project only, not subprojects 2`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "devEngines": {
    "packageManager": {
      "name": "pnpm",
      "onFail": "ignore",
      "version": ">=10",
    },
  },
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "sub-project",
  "packageManager": "pnpm@10.33.0",
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "projen build",
    "compile": "projen compile",
    "default": "projen default",
    "package": "projen package",
    "post-compile": "projen post-compile",
    "pre-compile": "projen pre-compile",
    "test": "projen test",
  },
  "version": "0.0.0",
}
`;

exports[`single bugs field present 1`] = `
{
  "email": "bugs@foobar.local",
}
`;

exports[`yarn resolutions 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "devEngines": {
    "packageManager": {
      "name": "yarn",
      "onFail": "ignore",
      "version": "1.22.22",
    },
  },
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "publishConfig": {
    "access": "public",
  },
  "resolutions": {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "scripts": {
    "build": "projen build",
    "compile": "projen compile",
    "default": "projen default",
    "eject": "projen eject",
    "package": "projen package",
    "post-compile": "projen post-compile",
    "pre-compile": "projen pre-compile",
    "test": "projen test",
  },
  "version": "0.0.0",
}
`;

exports[`yarn_berry resolutions 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "devEngines": {
    "packageManager": {
      "name": "yarn",
      "onFail": "ignore",
      "version": ">=4",
    },
  },
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "packageManager": "yarn@4.13.0",
  "publishConfig": {
    "access": "public",
  },
  "resolutions": {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "scripts": {
    "build": "projen build",
    "compile": "projen compile",
    "default": "projen default",
    "eject": "projen eject",
    "package": "projen package",
    "post-compile": "projen post-compile",
    "pre-compile": "projen pre-compile",
    "test": "projen test",
  },
  "version": "0.0.0",
}
`;

exports[`yarn_classic resolutions 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "devEngines": {
    "packageManager": {
      "name": "yarn",
      "onFail": "ignore",
      "version": "1.22.22",
    },
  },
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "publishConfig": {
    "access": "public",
  },
  "resolutions": {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "scripts": {
    "build": "projen build",
    "compile": "projen compile",
    "default": "projen default",
    "eject": "projen eject",
    "package": "projen package",
    "post-compile": "projen post-compile",
    "pre-compile": "projen pre-compile",
    "test": "projen test",
  },
  "version": "0.0.0",
}
`;

exports[`yarn2 resolutions 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "devEngines": {
    "packageManager": {
      "name": "yarn",
      "onFail": "ignore",
      "version": ">=4",
    },
  },
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "packageManager": "yarn@4.13.0",
  "publishConfig": {
    "access": "public",
  },
  "resolutions": {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "scripts": {
    "build": "projen build",
    "compile": "projen compile",
    "default": "projen default",
    "eject": "projen eject",
    "package": "projen package",
    "post-compile": "projen post-compile",
    "pre-compile": "projen pre-compile",
    "test": "projen test",
  },
  "version": "0.0.0",
}
`;
